Navbar spacing fixes for new links

--- a/src/variables.scss
+++ b/src/variables.scss
@@ -25,7 +25,7 @@ $ease-in-out-curve-function: cubic-bezier(0.35, 0, 0.25, 1) !default;
 
 // Media queries
 $mobile: '(max-width: 600px)';
-$tablet: '(min-width: 601px) and (max-width: 1158px)';
-$desktop: '(min-width: 1159px)';
+$tablet: '(min-width: 601px) and (max-width: 1044px)';
+$desktop: '(min-width: 1045px)';
 
 $main-hero-height: 25rem;
